[package]
name = "crypto_vault"
version = "0.1.0"
authors = ["Zachary Bush <zach@zmbush.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zmbush/crypto_vault"
keywords = ["cryptography", "vault", "password", "pbkdf2", "AES"]

[dependencies.clippy]
git = "https://github.com/Manishearth/rust-clippy"

[dependencies]
openssl = "*"
rand = "*"
regex = "*"
regex_macros = "*"
rustc-serialize = "*"

[dev-dependencies]
rustc-serialize = "*"
